created java codegen test project, compile and test it to test java codegen